--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ TTS/
 *.pth.tar
 **.zip
 projects/
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/TFG.iml
+.idea/vcs.xml
+cloning/gui_utils/__pycache__/recording_status.cpython-38.pyc
+cloning/gui_utils/audio_entry.ui
+cloning/validated.tsv
