--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ cloning/gui_utils/__pycache__/recording_status.cpython-38.pyc
 cloning/gui_utils/audio_entry.ui
 cloning/validated.tsv
 **/__pycache__/**
+/*dataset/*
